CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

PROJECT ( "proc_stat" )
SET ( PROJECT_VERSION_MAJOR 0 )
SET ( PROJECT_VERSION_MINOR 1 )

SET ( CMAKE_VERBOSE_MAKEFILE true )

SET ( OUTPUT_ELF
        "${CMAKE_PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}"
        )
SET ( SRC_FILES
        main.cc
        proc_stat.cc
        )

SET ( CMAKE_C_COMPILER "gcc" )
SET ( CMAKE_CXX_COMPILER "g++" )

# c++11 for stol
ADD_COMPILE_OPTIONS ( -g -Wall -std=c++11)
SET ( CMAKE_EXE_LINKER_FLAGS "-Wl,--gc-sections" )

# LINK_LIBRARIES(  )
# LINK_DIRECTORIES ( /usr/lib )

SET ( CMAKE_C_FLAGS_DEBUG "-DDEBUG -DC_FLAGS" )
SET ( CMAKE_EXE_LINKER_FLAGS_DEBUG "-DDEBUG -DLINKER_FLAGS" )

SET ( CMAKE_C_FLAGS_RELEASE "-DRELEASE -DC_FLAGS" )
SET ( CMAKE_EXE_LINKER_FLAGS_RELEASE "-DRELEASE -DLINKER_FLAGS" )

ADD_EXECUTABLE( ${OUTPUT_ELF} ${SRC_FILES} )